crates/swc/tests/tsc-references/types/primitives/void/invalidVoidValues/input.ts/es2015.2.minified/output.js
var x, E, a1, b, M, E1;
x = 1, x = "", x = !0, (E1 = E || (E = {
}))[E1.A = 0] = "A", x = E, x = E.A, x = a1, x = b, x = {
    f () {
    }
}, (M || (M = {
})).x = 1, x = M, x = function(a) {
    x = a;
};
